# Python_task1

./: README.md
Python_WB/myproject/: Untitled.ipynb  pyproject.toml
